--- a/2021-12-02/schereSteinPapier/custom.css
+++ b/2021-12-02/schereSteinPapier/custom.css
@@ -9,7 +9,6 @@ main {
 }
 article {
     max-width: 1200px;
-    margin: auto;
     width: 100%;
     flex-basis: 100%;
     background-color: rgba(255,255,255,.5);
@@ -28,10 +27,10 @@ button {
 .icon .img-fluid { max-width: 100px; }
 
 .w-100 {
-    width: 100% !important;
+    width: 100%;
 }
 .d-block {
-    display: block !important;
+    display: block;
 }
 h1 {
     font-size: calc(1.375rem + 1.5vw);
@@ -41,7 +40,7 @@ h1 {
 }
 
 .w-50 {
-    width: 50% !important;
+    width: 50%;
 }
 
 .img-fluid {
